--- a/xyx553/web/Untitled-5.html
+++ b/xyx553/web/Untitled-5.html
@@ -82,7 +82,7 @@
       <div class="productRow"> 
         <!-- Each product row contains info of 3 elements -->
         <article class="productInfo"> <!-- Each individual product description -->
-          <div><img alt="sample" src="file:../image/AB52D374BDC69675E85E8112465634DD.jpg"></div>
+          <div><img alt="sample" src="../image/AB52D374BDC69675E85E8112465634DD.jpg"></div>
           <p class="price">用脚接球</p>
           <p class="productContent">西谷夕</p>
           <p class="productContent">“乌野的守护神”&nbsp;</p>
