--- a/xyx553/web/Untitled-0.html
+++ b/xyx553/web/Untitled-0.html
@@ -17,8 +17,8 @@
     <div id="logo">
       <!-- <img src="logoImage.png" alt="sample logo"> -->
       <!-- Company Logo text -->
-      <strong><em>排球少年!!</em></strong></div>
-    <nav> <a href="#" title="Link">首页</a>  </nav>
+      <a href="index.html">返回首页</a></div>
+    <nav> </nav>
   </header>
   <div id="content">
     <div class="notOnDesktop"> 
