--- a/xyx553/web/Untitled-2.html
+++ b/xyx553/web/Untitled-2.html
@@ -12,7 +12,7 @@
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">队伍介绍</h4>
+    <h4 class="logo"><a href="index.html">返回首页&nbsp;</a></h4>
   </header>
   <!-- Hero Section -->
   <section class="intro">
