--- a/xyx553/web/Untitled-0.html
+++ b/xyx553/web/Untitled-0.html
@@ -17,7 +17,7 @@
     <div id="logo">
       <!-- <img src="logoImage.png" alt="sample logo"> -->
       <!-- Company Logo text -->
-      <a href="xyx553/index.html">返回首页</a></div>
+      <a href="../../index.html">返回首页</a></div>
     <nav> </nav>
   </header>
   <div id="content">
