--- a/xyx553/web/Untitled-1.html
+++ b/xyx553/web/Untitled-1.html
@@ -17,7 +17,7 @@
    <div id="logo">
       <!-- <img src="logoImage.png" alt="sample logo"> -->
       <!-- Company Logo text -->
-      <a href="index.html">返回首页</a></div>
+      <a href="https://66z66z.github.io/fluffy-octo-barnacle/">返回首页</a></div>
     <nav> </nav>
   </header>
   <div id="content">
