--- a/xyx553/web/Untitled-5.html
+++ b/xyx553/web/Untitled-5.html
@@ -16,7 +16,7 @@
    <div id="logo"> 
       <!-- <img src="logoImage.png" alt="sample logo"> -->
       <!-- Company Logo text -->
-      <a href="index.html"> 返回首页</a></div>
+      <a href="https://66z66z.github.io/fluffy-octo-barnacle/"> 返回首页</a></div>
 </header>
   <section id="offer"> 
     <!-- The offer section displays a banner text for promotions -->
