--- a/xyx553/web/Untitled-2.html
+++ b/xyx553/web/Untitled-2.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html>
-<head>
+<html><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Light Theme</title>
-<link href="https://levolatte.github.io/weall/" rel="stylesheet" type="text/css">
+<link href="../web/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Main Container -->
