--- a/xyx553/web/Untitled-2.html
+++ b/xyx553/web/Untitled-2.html
@@ -67,7 +67,7 @@
       <p class="text_column">伊达工业的队员们普遍都身材高大，光是站在球网对面就给人十足的压迫感。&nbsp;</p>
       <p class="text_column">“铁壁”般的拦网防御是其特点武器。</p>
       <p class="text_column">其二传手是少见的大型举球员。&nbsp;</p>
-    </div>../image/
+    </div>
     <div class="thumbnail"> <a href="#"><img src="../image/4B4DB85B21885D548E57DEF0BBB124AE.jpg" alt="" width="1070" class="cards"/></a>
       <h4>稻荷崎高校</h4>
       <p class="tag">"无需追忆昨天"</p>
